<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/srresnet_tiling_switch"
        android:theme="@style/Preference.Switch"
        android:text="@string/settings_text_use_tiling"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textView_srresnet_tiling_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/settings_text_tiling_size"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/srresnet_seekBar"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminate="false"
            android:max="4"
            android:progress="0"
            android:theme="@style/Preference.SeekBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView_srresnet_seekbar_progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_srresnet_seekbar_progress"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="4"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_srresnet_stitching_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_stitching_style"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#000000"
        />

    <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/srresnet_button_group_stitching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:elevation="2dp"
        app:borderColor="@color/orange"
        app:borderWidth="0.5dp"
        app:draggable="true"
        app:radius="5dp"
        app:ripple="true"
        app:rippleColor="@color/orange"
        app:selectedBackground="@color/orange"
        app:selectionAnimationDuration="300"
        app:selectionAnimationInterpolator="fastOutSlowIn"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/seg1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:selectedTextColor="@color/white"
            app:text="@string/settings_text_stitching_simple"
            app:textStyle="bold" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/seg2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:selectedTextColor="@color/white"
            app:text="@string/settings_text_stitching_advanced"
            app:textStyle="bold" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/seg3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:selectedTextColor="@color/white"
            app:text="@string/settings_text_stitching_advanced_hsv"
            app:textStyle="bold" />

    </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
</LinearLayout>