<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="200dp"
    android:minHeight="200dp">

    <TextView
        android:id="@+id/textView_backend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_text_backend"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/segmentedButtonGroup"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:elevation="2dp"
        app:borderColor="@color/orange"
        app:borderWidth="0.5dp"
        app:draggable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_backend"
        app:radius="5dp"
        app:ripple="true"
        app:rippleColor="@color/orange"
        app:selectedBackground="@color/orange"
        app:selectionAnimationDuration="300"
        app:selectionAnimationInterpolator="fastOutSlowIn">

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/button_srdense"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:selectedTextColor="@color/white"
            app:text="@string/settings_text_option_srdense"
            app:textStyle="bold" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/button_srresnet"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:selectedTextColor="@color/white"
            app:text="@string/settings_text_option_srresnet"
            app:textStyle="bold" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/button_srgan"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:selectedTextColor="@color/white"
            app:text="@string/settings_text_option_srgan"
            app:textStyle="bold" />

    </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_settings_backend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segmentedButtonGroup">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_settings_server_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/settings_text_server_url"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_server_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_server_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:inputType="text"
        android:textSize="18sp"
        android:theme="@style/Preference.Switch"
        app:layout_constraintBottom_toTopOf="@+id/switch_debug"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch_debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/settings_text_debug"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:theme="@style/Preference.Switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>